2002-05-06  Angus Leeming  <a.leeming@ic.ac.uk>

	* FormBase.C (show):
	* FormBaseDeprecated.C (show): having built the dialog, ensure that it
	is widened sufficiently to display wholely the tabs of any
	tabbed-folders. This is more than just cosmetic as it will prevent
	crashes when selecting a partly displayed tab. (The problem occurs
	with a "long" locale like German and xforms < 0.9999.)

	* xforms_resize.[Ch]: new files doing the grunt work of ascertaining
	by how much a dialog should be scaled to show its tabs fully (should
	it have a tabfolder).

2002-05-08  Garst Reese  <reese@isn.net>

	* FormMathsDeco.C: fix offset to normal size decos.

2002-05-03  Angus Leeming  <a.leeming@ic.ac.uk>
 
 	* xformsGImage.C (rotate): work-around xforms bug when rotating by
	270 degs.

2002-05-02  Herbert Voss  <voss@perce.de>

	* FormBibtex.C (apply): a change from a style to an empty one
	(which is valid) wasn't saved

2002-05-02  Herbert Voss  <voss@perce.de>

	* FormGraphics.C (input): do not read bb new when it was changed

2002-04-30  Rob Lahaye <lahaye@users.sourceforge.net>

	* FormDocument.C: "USletter" -> "US letter" etc., "Other" -> "Custom".
	* FormParagraph.C: "Other" -> "Custom"
	* FormPreferences.C: "USletter" -> "US letter" etc.
	* forms/form_document.fd: 'Papersize" -> "Paper size" style consistency
	* forms/form_preferences.fd: style consistency

2002-04-30  Angus Leeming  <a.leeming@ic.ac.uk>

	* FormCharacter.C:
	* FormDocument.C:
	* FormPreferences.C (findPos): remove this template to xforms_helpers.h.

	* xforms_helpers.h (findPos): new template.

	* FormGraphics.h: store a vector<string> origins_ of the LaTeX names
	for the rotation origins.

	* FormGraphics.C: internationalise the rotation origin strings in the
	choice using the same approach as used for the language names in the
	Character, Document, Preferences dialogs.

2002-04-30  Angus Leeming  <a.leeming@ic.ac.uk>

	* FormCharacter.C:
	* FormDocument.C: