@@ -134,6 +134,8 @@ public:
 	}
 	///
 	int getMaxWidth(BufferView *, UpdatableInset const *) const;
+	///
+	void update(BufferView *, LyXFont const &, bool =false);
 
 private:
 	///
